force-app/main/default/objects/Guest_Reservation__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <label>Guest</label>
    <referenceTo>Guest__c</referenceTo>
    <relationshipLabel>Guest Reservations</relationshipLabel>
    <relationshipName>Guest_Reservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>