force-app/main/default/objects/Guest_Reservation__c/fields/Is_Reservation_Completed_restaurant__c.field-meta.xml
<CustomField>
    <fullName>Is_Reservation_Completed_restaurant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reservation Completed?restaurant</label>
    <type>Checkbox</type>
</CustomField>