force-app/main/default/objects/Guest_Reservation__c/fields/Is_Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Visit_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visit Completed?</label>
    <type>Checkbox</type>
</CustomField>