force-app/main/default/objects/Guest_Reservation__c/fields/Maximum_Corporate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Corporate_Discount__c</fullName>
    <label>Maximum Corporate Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>