force-app/main/default/objects/Guest_Reservation__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>